Última versão do trabalho, alterações feitas a 2 serviços para retornarem certos HttpStatusCode, tudo funcional
